k3s/apps/vaultwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
